src/objects/Proforma__c.object
<CustomObject>
    <fields>
        <fullName>Total_Expenses__c</fullName>
        <formula>Total_RC_Reinvestment__c + 
Direct_Mail_Advertising__c + 
Postage_Freight__c + 
RR_GV__c + 
Promo_Chips_Match_Play__c + 
Giveaways__c + 
Casino_Gifts__c + 
Comp_Transportation__c + 
Comp_Airfare__c + 
Variable_Expenses__c + 
Fixed_Expenses__c +
RC_Gift__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Expenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Gaming_Tax_Cust_Grps__c</fullName>
        <label>Total Gaming Tax</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Gaming_Tax__c</fullName>
        <label>Total Gaming Tax</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Invitations_Sent__c</fullName>
        <description>Sum of Invitation sent for each type</description>
        <label>Total Invitations Sent</label>
        <summarizedField>Invitations__c.Sent__c</summarizedField>
        <summaryForeignKey>Invitations__c.Customer_Group_Proforma__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Invitations_Sent_for_Cust_Grps__c</fullName>
        <label>Total Invitations Sent for Cust. Groups</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Offer_Expenses_Cust_Grps__c</fullName>
        <formula>Total_RC_Reinvestment_Cust_Grps__c +
 Direct_Mail_Advertising_Cust_Grps__c +
 Postage_Freight_Cust_Grps__c +
 RR_GV_Cust_Grps__c +
 Promo_Chips_Match_Play_Cust_Grps__c + 
 Giveaways_Cust_Grps__c +
 Casino_Gifts_Cust_Grps__c +
 Comp_Transportation_Cust_Grps__c +
 Comp_Airfare_Cust_Grps__c +
 Variable_Expenses_Cust_Grps__c +
 Fixed_Expenses_Cust_Grps__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Offer Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_P_L_Delayered__c</fullName>
        <label>Total P/L (Delayered)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_P_L_Incremental__c</fullName>
        <label>Total P/L (Incremental)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_P_L_Layered__c</fullName>
        <label>Total P/L (Layered)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_P_L_per_player_Delayered__c</fullName>
        <label>Total P/L per player (Delayered)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_P_L_per_player_Incremental__c</fullName>
        <label>Total P/L per player (Incremental)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_P_L_per_player_Layered__c</fullName>
        <label>Total P/L per player (Layered)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_RC_Reinvestment_Cust_Grps__c</fullName>
        <label>Total RC Reinvestment</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_RC_Reinvestment__c</fullName>
        <label>Total RC Reinvestment</label>
        <summarizedField>Expense_Item__c.Customer_Group_Expense__c</summarizedField>
        <summaryFilterItems>
            <field>Expense_Item__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Total RC Reinvestment</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense_Item__c.Customer_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_ROI_Delayered__c</fullName>
        <label>Total ROI% (Delayered)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_ROI_Incremental__c</fullName>
        <label>Total ROI % (Incremental)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_ROI_Layered__c</fullName>
        <label>Total ROI % (Layered)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_ROS_Delayered__c</fullName>
        <label>Total ROS % (Delayered)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_ROS_Incremental__c</fullName>
        <label>Total ROS % (Incremental)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_ROS_Layered__c</fullName>
        <label>Total ROS % (Layered)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Redemption_Prct_for_Cust_Grps__c</fullName>
        <label>Total Redemption % for Cust. Grps</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Redemption__c</fullName>
        <formula>ROUND( Unique_Players__c *  Number_of_Trips__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Redemption</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Redemption_for_Cust_Grps__c</fullName>
        <label>Total Redemption for Cust. Grps.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_Delayered__c</fullName>
        <label>Total Revenue (Delayered)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_Incremental__c</fullName>
        <label>Total Revenue (Incremental)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unique_Players_Total_for_Cust_Grps__c</fullName>
        <label>Unique Players (Total) for Cust. Grps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Players__c</fullName>
        <description>Sum of all invitation type redemptions.</description>
        <label>Unique Players</label>
        <summarizedField>Invitations__c.of_Responders__c</summarizedField>
        <summaryForeignKey>Invitations__c.Customer_Group_Proforma__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Variable_Expenses_Cust_Grps__c</fullName>
        <label>Variable Expenses</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variable_Expenses__c</fullName>
        <label>Variable Expenses</label>
        <summarizedField>Expense_Item__c.Customer_Group_Expense__c</summarizedField>
        <summaryFilterItems>
            <field>Expense_Item__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Variable Expenses</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense_Item__c.Customer_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Proforma</label>
    <listViews>
        <fullName>AC_DSM_Proforma_Proforma</fullName>
        <filterScope>Queue</filterScope>
        <label>AC - Decision Support Managers</label>
        <queue>AC_DSM_Proforma</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AC_POD_MKTMGR_Proforma_Proforma</fullName>
        <filterScope>Queue</filterScope>
        <label>AC - POD Market Manager</label>
        <queue>AC_POD_MKTMGR_Proforma</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Campaign_Project_Proforma_RT</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Proforma__c.Campaign_Project_Proforma</value>
        </filters>
        <label>Campaign Project Proforma RT</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Proforma Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proformas</pluralLabel>
    <recordTypes>
        <fullName>Campaign_Project_Proforma</fullName>
        <active>true</active>
        <label>Campaign Project Proforma</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Group_Proforma</fullName>
        <active>true</active>
        <label>Customer Group Proforma</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>